--- a/LangChainLLM/l1-ModelPrompt.ipynb
+++ b/LangChainLLM/l1-ModelPrompt.ipynb
@@ -122,6 +122,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4aa06606d1b88deb"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "bcc72e883440cfe9",
    "metadata": {
