--- a/LangChainLLM/l1-ModelPrompt.ipynb
+++ b/LangChainLLM/l1-ModelPrompt.ipynb
@@ -74,27 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "770a9b7ab1dccc0d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T14:24:25.507453680Z",
-     "start_time": "2023-11-23T14:24:25.432637807Z"
+     "end_time": "2023-11-24T12:44:39.918164609Z",
+     "start_time": "2023-11-24T12:44:39.917101999Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !pip install python-dotenv\n",
-    "print(openai.api_key) "
+    "# print(openai.api_key) "
    ]
   },
   {
