--- a/LangChainLLM/l2-Memory.ipynb
+++ b/LangChainLLM/l2-Memory.ipynb
@@ -48,16 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "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\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "_ = load_dotenv(find_dotenv())  # read local .env file\n",
     "openai.api_key = os.environ['OPENAI_API_KEY_FOUR']\n",
@@ -74,15 +66,11 @@
     "    llm_model = \"gpt-3.5-turbo\"\n",
     "else:\n",
     "    llm_model = \"gpt-3.5-turbo-0301\"\n",
-    "print(openai.api_key)\n",
+    "# print(openai.api_key)\n",
     "warnings.filterwarnings('ignore')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T11:32:07.435531615Z",
-     "start_time": "2023-11-24T11:32:05.459840980Z"
-    }
+    "collapsed": false
    },
    "id": "30ee818a4865e3ab"
   },
