--- a/LangChainLLM/l1-ModelPrompt.ipynb
+++ b/LangChainLLM/l1-ModelPrompt.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# !pip install python-dotenv\n",
-    "print(openai.api_key) "
+    "# print(openai.api_key) "
    ]
   },
   {
