--- a/LangChainLLM/l2-Memory.ipynb
+++ b/LangChainLLM/l2-Memory.ipynb
@@ -74,7 +74,7 @@
     "    llm_model = \"gpt-3.5-turbo\"\n",
     "else:\n",
     "    llm_model = \"gpt-3.5-turbo-0301\"\n",
-    "print(openai.api_key)\n",
+    "# print(openai.api_key)\n",
     "warnings.filterwarnings('ignore')"
    ],
    "metadata": {
