--- a/LangChainLLM/l3-Chains.ipynb
+++ b/LangChainLLM/l3-Chains.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -34,20 +34,20 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.chains import LLMChain\n",
-    "from langchain.chains import SimpleSequentialChain"
+    "from langchain.chains import SimpleSequentialChain\n",
+    "from langchain.chains import SequentialChain\n",
+    "from langchain.chains.router import MultiPromptChain\n",
+    "from langchain.chains.router.llm_router import LLMRouterChain,RouterOutputParser\n",
+    "from langchain.prompts import PromptTemplate"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:18:52.096641318Z",
-     "start_time": "2023-11-24T12:18:52.082959181Z"
-    }
+    "collapsed": false
    },
    "id": "11ecce1fbbfbaa3a"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "_ = load_dotenv(find_dotenv())  # read local .env file\n",
@@ -69,38 +69,20 @@
     "warnings.filterwarnings('ignore')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:43:48.275679783Z",
-     "start_time": "2023-11-24T12:43:48.211432058Z"
-    }
+    "collapsed": false
    },
    "id": "5eb73d38722c8fbf"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                   Product                                             Review\n0     Queen Size Sheet Set  I ordered a king size set. My only criticism w...\n1   Waterproof Phone Pouch  I loved the waterproof sac, although the openi...\n2      Luxury Air Mattress  This mattress had a small hole in the top of i...\n3           Pillows Insert  This is the best throw pillow fillers on Amazo...\n4  Milk Frother Handheld\\n   I loved this product. But they only seem to l...",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Product</th>\n      <th>Review</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Queen Size Sheet Set</td>\n      <td>I ordered a king size set. My only criticism w...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Waterproof Phone Pouch</td>\n      <td>I loved the waterproof sac, although the openi...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Luxury Air Mattress</td>\n      <td>This mattress had a small hole in the top of i...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Pillows Insert</td>\n      <td>This is the best throw pillow fillers on Amazo...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Milk Frother Handheld\\n</td>\n      <td>I loved this product. But they only seem to l...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data/Data.csv')\n",
     "df.head()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:08:36.489361705Z",
-     "start_time": "2023-11-24T12:08:36.395629715Z"
-    }
+    "collapsed": false
    },
    "id": "315bece2c8a10555"
   },
@@ -124,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "llm = ChatOpenAI(temperature=0.9,\n",
@@ -132,17 +114,13 @@
     "llm.openai_api_key = openai.api_key"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:09:59.153692735Z",
-     "start_time": "2023-11-24T12:09:59.102197456Z"
-    }
+    "collapsed": false
    },
    "id": "c7e5312e498abd92"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "prompt = ChatPromptTemplate.from_template(\n",
@@ -151,17 +129,13 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:18:14.096472335Z",
-     "start_time": "2023-11-24T12:18:14.016479128Z"
-    }
+    "collapsed": false
    },
    "id": "7db05863f60e46e0"
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "chain = LLMChain(\n",
@@ -170,38 +144,21 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:18:16.396204536Z",
-     "start_time": "2023-11-24T12:18:16.361727888Z"
-    }
+    "collapsed": false
    },
    "id": "879c56351a335264"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Royal Bedding.'"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Bellow we define product with whom we're going use prompt\n",
     "product = \"Queen Size Sheet Set\"\n",
     "chain.run(product)     "
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:18:19.447244955Z",
-     "start_time": "2023-11-24T12:18:18.796018143Z"
-    }
+    "collapsed": false
    },
    "id": "eda061c06294cc7c"
   },
@@ -217,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "llm = ChatOpenAI(temperature=0.9, model=llm_model)\n",
@@ -232,17 +189,13 @@
     "chain_one = LLMChain(llm=llm, prompt=first_prompt)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:19:21.165823301Z",
-     "start_time": "2023-11-24T12:19:21.119238473Z"
-    }
+    "collapsed": false
    },
    "id": "f6b14cba3a13427"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# prompt template 2\n",
@@ -254,17 +207,13 @@
     "chain_two = LLMChain(llm=llm, prompt=second_prompt)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:19:41.756119152Z",
-     "start_time": "2023-11-24T12:19:41.686154371Z"
-    }
+    "collapsed": false
    },
    "id": "9d879ec977e1e09d"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "overall_simple_chain = SimpleSequentialChain(chains=[chain_one, chain_two],\n",
@@ -272,61 +221,379 @@
     "                                            )"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:20:06.434805191Z",
-     "start_time": "2023-11-24T12:20:06.392273602Z"
-    }
+    "collapsed": false
    },
    "id": "257e6ced355f1fb1"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\u001B[1m> Entering new SimpleSequentialChain chain...\u001B[0m\n",
-      "\u001B[36;1m\u001B[1;3m\"Royal Linens\"\u001B[0m\n",
-      "\u001B[33;1m\u001B[1;3mRoyal Linens is a luxury home textile brand offering high-quality bedding, bath, and kitchen linens with elegant designs and superior comfort.\u001B[0m\n",
-      "\n",
-      "\u001B[1m> Finished chain.\u001B[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "'Royal Linens is a luxury home textile brand offering high-quality bedding, bath, and kitchen linens with elegant designs and superior comfort.'"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "overall_simple_chain.run(product)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-24T12:20:22.218464141Z",
-     "start_time": "2023-11-24T12:20:19.287564095Z"
-    }
+    "collapsed": false
    },
    "id": "d539bc11db1b2787"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## SequentialChain"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7ff621b99aacf21e"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "llm = ChatOpenAI(temperature=0.9, model=llm_model)\n",
+    "llm.openai_api_key = openai.api_key\n",
+    "\n",
+    "# prompt template 1: translate to english\n",
+    "first_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Translate the following review to english:\"\n",
+    "    \"\\n\\n{Review}\"\n",
+    ")\n",
+    "# chain 1: input= Review and output= English_Review\n",
+    "chain_one = LLMChain(llm=llm, prompt=first_prompt, \n",
+    "                     output_key=\"English_Review\"\n",
+    "                    )\n"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "878a8059cec30ee2"
+   "id": "6af51d9e0c78e161"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "second_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Can you summarize the following review in 1 sentence:\"\n",
+    "    \"\\n\\n{English_Review}\"\n",
+    ")\n",
+    "# chain 2: input= English_Review and output= summary\n",
+    "chain_two = LLMChain(llm=llm, prompt=second_prompt, \n",
+    "                     output_key=\"summary\"\n",
+    "                    )"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "86a4ff827eed825"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# prompt template 3: translate to english\n",
+    "third_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"What language is the following review:\\n\\n{Review}\"\n",
+    ")\n",
+    "# chain 3: input= Review and output= language\n",
+    "chain_three = LLMChain(llm=llm, prompt=third_prompt,\n",
+    "                       output_key=\"language\"\n",
+    "                      )\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7cc22769603ba5de"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# prompt template 4: follow up message\n",
+    "fourth_prompt = ChatPromptTemplate.from_template(\n",
+    "    \"Write a follow up response to the following \"\n",
+    "    \"summary in the specified language:\"\n",
+    "    \"\\n\\nSummary: {summary}\\n\\nLanguage: {language}\"\n",
+    ")\n",
+    "# chain 4: input= summary, language and output= followup_message\n",
+    "chain_four = LLMChain(llm=llm, prompt=fourth_prompt,\n",
+    "                      output_key=\"followup_message\"\n",
+    "                     )"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d70aa17bc6674a52"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# overall_chain: input= Review \n",
+    "# and output= English_Review,summary, followup_message\n",
+    "overall_chain = SequentialChain(\n",
+    "    chains=[chain_one, chain_two, chain_three, chain_four],\n",
+    "    input_variables=[\"Review\"],\n",
+    "    output_variables=[\"English_Review\", \"summary\",\"followup_message\"],\n",
+    "    verbose=True\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cd309441a5db8d80"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "review = df.Review[5]\n",
+    "overall_chain(review)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "282c31f2bb688e7b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Router Chain"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ec3be013139a92e9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "physics_template = \"\"\"You are a very smart physics professor. \\\n",
+    "You are great at answering questions about physics in a concise\\\n",
+    "and easy to understand manner. \\\n",
+    "When you don't know the answer to a question you admit\\\n",
+    "that you don't know.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "\n",
+    "math_template = \"\"\"You are a very good mathematician. \\\n",
+    "You are great at answering math questions. \\\n",
+    "You are so good because you are able to break down \\\n",
+    "hard problems into their component parts, \n",
+    "answer the component parts, and then put them together\\\n",
+    "to answer the broader question.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "history_template = \"\"\"You are a very good historian. \\\n",
+    "You have an excellent knowledge of and understanding of people,\\\n",
+    "events and contexts from a range of historical periods. \\\n",
+    "You have the ability to think, reflect, debate, discuss and \\\n",
+    "evaluate the past. You have a respect for historical evidence\\\n",
+    "and the ability to make use of it to support your explanations \\\n",
+    "and judgements.\n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "\n",
+    "computerscience_template = \"\"\" You are a successful computer scientist.\\\n",
+    "You have a passion for creativity, collaboration,\\\n",
+    "forward-thinking, confidence, strong problem-solving capabilities,\\\n",
+    "understanding of theories and algorithms, and excellent communication \\\n",
+    "skills. You are great at answering coding questions. \\\n",
+    "You are so good because you know how to solve a problem by \\\n",
+    "describing the solution in imperative steps \\\n",
+    "that a machine can easily interpret and you know how to \\\n",
+    "choose a solution that has a good balance between \\\n",
+    "time complexity and space complexity. \n",
+    "\n",
+    "Here is a question:\n",
+    "{input}\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d1899b7c48be9be5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prompt_infos = [\n",
+    "    {\n",
+    "        \"name\": \"physics\", \n",
+    "        \"description\": \"Good for answering questions about physics\", \n",
+    "        \"prompt_template\": physics_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"math\", \n",
+    "        \"description\": \"Good for answering math questions\", \n",
+    "        \"prompt_template\": math_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"History\", \n",
+    "        \"description\": \"Good for answering history questions\", \n",
+    "        \"prompt_template\": history_template\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"computer science\", \n",
+    "        \"description\": \"Good for answering computer science questions\", \n",
+    "        \"prompt_template\": computerscience_template\n",
+    "    }\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7f01a2eff63939b1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(temperature=0, model=llm_model)\n",
+    "llm.openai_api_key = openai.api_key"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "68a88a0dbc099683"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "destination_chains = {}\n",
+    "for p_info in prompt_infos:\n",
+    "    name = p_info[\"name\"]\n",
+    "    prompt_template = p_info[\"prompt_template\"]\n",
+    "    prompt = ChatPromptTemplate.from_template(template=prompt_template)\n",
+    "    chain = LLMChain(llm=llm, prompt=prompt)\n",
+    "    destination_chains[name] = chain  \n",
+    "    \n",
+    "destinations = [f\"{p['name']}: {p['description']}\" for p in prompt_infos]\n",
+    "destinations_str = \"\\n\".join(destinations)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c22034ef1bbc1943"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "default_prompt = ChatPromptTemplate.from_template(\"{input}\")\n",
+    "default_chain = LLMChain(llm=llm, prompt=default_prompt)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42efdb8ce6d72adb"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "MULTI_PROMPT_ROUTER_TEMPLATE = \"\"\"Given a raw text input to a \\\n",
+    "language model select the model prompt best suited for the input. \\\n",
+    "You will be given the names of the available prompts and a \\\n",
+    "description of what the prompt is best suited for. \\\n",
+    "You may also revise the original input if you think that revising\\\n",
+    "it will ultimately lead to a better response from the language model.\n",
+    "\n",
+    "<< FORMATTING >>\n",
+    "Return a markdown code snippet with a JSON object formatted to look like:\n",
+    "```json\n",
+    "{{{{\n",
+    "    \"destination\": string \\ name of the prompt to use or \"DEFAULT\"\n",
+    "    \"next_inputs\": string \\ a potentially modified version of the original input\n",
+    "}}}}\n",
+    "```\n",
+    "\n",
+    "REMEMBER: \"destination\" MUST be one of the candidate prompt \\\n",
+    "names specified below OR it can be \"DEFAULT\" if the input is not\\\n",
+    "well suited for any of the candidate prompts.\n",
+    "REMEMBER: \"next_inputs\" can just be the original input \\\n",
+    "if you don't think any modifications are needed.\n",
+    "\n",
+    "<< CANDIDATE PROMPTS >>\n",
+    "{destinations}\n",
+    "\n",
+    "<< INPUT >>\n",
+    "{{input}}\n",
+    "\n",
+    "<< OUTPUT (remember to include the ```json)>>\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1fbd65f745aa3ae5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "router_template = MULTI_PROMPT_ROUTER_TEMPLATE.format(\n",
+    "    destinations=destinations_str\n",
+    ")\n",
+    "router_prompt = PromptTemplate(\n",
+    "    template=router_template,\n",
+    "    input_variables=[\"input\"],\n",
+    "    output_parser=RouterOutputParser(),\n",
+    ")\n",
+    "\n",
+    "router_chain = LLMRouterChain.from_llm(llm, router_prompt)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "308352a37104d1cd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "chain = MultiPromptChain(router_chain=router_chain, \n",
+    "                         destination_chains=destination_chains, \n",
+    "                         default_chain=default_chain, verbose=True\n",
+    "                        )"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a765016d72059ee8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "chain.run(\"What is black body radiation?\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fa26256d3f4b95d2"
   }
  ],
  "metadata": {
